# rubo-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/cases/: README.md  case-001.md  case-002.md  case-003.md  case-004.md  case-005.md  case-006.md  case-007.md  case-008.md  case-009.md  case-010.md  case-011.md  case-012.md  case-013.md  case-014.md  case-015.md  case-016.md  case-017.md  case-018.md  case-019.md  case-020.md  case-021.md  case-022.md  case-023.md  case-024.md
docs/: METHODOLOGY.md
eval/: __init__.py  caseio.py  harness.py  metrics.py  report.py  system.py
eval/cassettes/: README.md
eval/cassettes/haiku/: eval.yaml
eval/cassettes/sonnet/: eval.yaml
report/: report.md
scripts/: run_eval.py  validate_dataset.py
src/break_clause_analyzer/: __init__.py  models.py  pipeline.py  server.py
src/break_clause_analyzer/core/: __init__.py  aggregate.py  checklist.py  dates.py  grounding.py
src/break_clause_analyzer/llm/: __init__.py  client.py  heuristic.py  prompts.py  schemas.py
tests/: conftest.py  test_dataset.py  test_harness.py  test_llm_client.py  test_packaging.py  test_pipeline.py  test_report.py  test_server.py
tests/unit/: test_aggregate.py  test_checklist.py  test_dates.py  test_grounding.py  test_import_isolation.py
